# iiot-qemu_x86-samples-dnsResolvePlayground

./: README.md  west.yml
common/src/: libc_extensions.c
dnsresolve/: .gitignore  CMakeLists.txt  prj.conf  qemuOverlayConf.conf
dnsresolve/include/: utils.h
dnsresolve/include/net/: dns.h
dnsresolve/src/: main.c
dnsresolve/src/net/: CMakeLists.txt  dns.c
scripts/: build_qemu.sh  run_qemu_docker.sh
